--- a/Votacio/activity.css
+++ b/Votacio/activity.css
@@ -377,6 +377,10 @@ header {
     margin: 0 auto;
 }
 
+#activity-controls:empty {
+    display: none;
+}
+
 .control-btn {
     border: none;
     border-radius: 999px;
